--- a/results/plots/prac_system_params.tex
+++ b/results/plots/prac_system_params.tex
@@ -37,6 +37,11 @@
         
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = T_train, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
+        {results/csv/NMAE_vs_Ntrain_Prac_2021-08-23_01_l-0.5_mp-0.2_wind-0.5.csv_dmd_angle.csv};
+        \addlegendentry{$m =$~\SI{0.2}{\kilo\gram}, $l = $~\SI{0.5}{\metre}}
+        
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = T_train, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {results/csv/NMAE_vs_Ntrain_Prac_2021-08-20_03_l-1_mp-0.2_wind-0.5.csv_dmd_angle.csv};
         \addlegendentry{$m =$~\SI{0.2}{\kilo\gram}, $l = $~\SI{1}{\metre}}
         
