Added photo of practical double pendulum

--- a/results/results.tex
+++ b/results/results.tex
@@ -37,6 +37,7 @@
             \label{fig:honeybee_with_payload}
         \end{figure}
 
+        \paragraph
         Figure~\ref{fig:honeybee_with_payload} shows Honeybee in flight with a suspended payload.
         Numerous flights were performed with different 
         payload masses, 
@@ -73,6 +74,16 @@
     \FloatBarrier\section{Parameter estimation with practical data}
         
         \subsection{Mass estimation}
+
+        As discussed in Chapter~\ref{chap:system_id}, for this method to work, the mass of the quadrotor needs to be known.
+        If a heavier battery or an extra accessory is added to the vehicle, 
+        the new vehicle mass will first have to be estimated in a separate flight, before the payload can be attached.
+        This is one of the disadvantages of the white-box modelling with parameter estimation based techniques.
+        The method is designed with a specific system in mind 
+        and needs to be adjusted and redesigned for every deviation from the the pre-assumed configuration.
+        In contrast, the data-driven technique is a general solution which works for a much wider range of system configurations.
+        The data-driven technique is not readjusted for an added vehicle mass, 
+        since the whole model is estimated instead of specific parameters.
 
         \FloatBarrier\subsection{Simple payload cable length estimation}
             \input{results/plots/FFT_pos_step_subfigs_prac.tex}
@@ -186,6 +197,15 @@
                 \item Plot 2 showing good velocity
                 \item Plot theta and velocity with bad prediction
             \end{itemize}
+
+        \FloatBarrier\subsection{Dynamic payload} 
+
+            \begin{figure}[!htb]
+                \centering
+                \includegraphics[width=0.6\linewidth]{practical_double_pendulum_2.jpg}
+                \caption{Practical flight with an elongated pendulum attached to Honeybee}
+                \label{fig:practical_double_pendulum}
+            \end{figure}
 
             \paragraph
             Double pendulum: 
