Added writing to section about practical dynamic payload

--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -20,12 +20,16 @@ This 3D mathematical model will be used in a nonlinear simulation of a quadrotor
 \section{Discretised model}
 \section{Model verification}
 \section{Dynamic payloads}
-\begin{itemize}
-    \item Most control in literature model payload as rigid Mass. Give references.
-    \item Some add spring stiffness of cable (give references e.g. QuadLoad ElasticCable Prasanth Kotaru)
-    \item but not practical because can design which cable you used. Cannot design which payload needs to be transported
-    \item water looks like double payload
-\end{itemize}
+
+    In this work, a dynamic payload refers to a payload with dynamics that differ significantly from a rigid mass.
+    When considering suspended payloads, a dynamic payload induces dynamics which differ from that of a simple pendulum.
+
+    \begin{itemize}
+        \item Most control in literature model payload as rigid Mass. Give references.
+        \item Some add spring stiffness of cable (give references e.g. QuadLoad ElasticCable Prasanth Kotaru)
+        \item but not practical because can design which cable you used. Cannot design which payload needs to be transported
+        \item water looks like double payload
+    \end{itemize}
 % https://hybrid-robotics.berkeley.edu/publications/ACC2017_QuadLoad_ElasticCable.pdf), 
 
 
