--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -588,7 +588,7 @@
         which is detrimental to performance of white-box method.
         For example, for an elongated payload attached to the cable the point mass assumption does not hold.
         The CoM of the payload is well below the attachment point of the cable, 
-        which creates a double pendulum model that differs significantly from a single pendulum.
+        which creates a double pendulum model that differs significantly from a simple pendulum.
         Such a payload is better represented in 2D by the double pendulum modelled in Figure~\ref{fig:double_pend}, 
         than the model defined in Figure~\ref{fig:floating_pend}.
 
