--- a/results/plots/prac_pediction_double_pend_vel_black.tex
+++ b/results/plots/prac_pediction_double_pend_vel_black.tex
@@ -43,7 +43,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Data-driven $V_N$ model predictions of a double pendulum for a North velocity step input
+    \caption{Data-driven $V_N$ model predictions with an elongated payload for a North velocity step input
         ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter})}
     \label{fig:prac_pediction_double_pend_theta_black}
 \end{figure}
