Added predictions for model in XY direction

--- a/results/results.tex
+++ b/results/results.tex
@@ -203,6 +203,27 @@
                 \item Plot 2 showing good velocity
                 \item Plot theta and velocity with bad prediction
             \end{itemize}
+        
+        \FloatBarrier\subsection{Extended dimensions}
+
+            \paragraph
+            This method can easily be extended to damp the swing angle in both the $x$ and $y$ directions.
+            Show new control vector and new state vector.
+            Talk about steps given.
+            Figure~\ref{fig:} DMD predictions
+
+            \input{results/plots/prac_pediction_xy_theta_x.tex}
+            \input{results/plots/prac_pediction_xy_theta_y.tex}
+            \input{results/plots/prac_pediction_xy_vel_x.tex}
+            \input{results/plots/prac_pediction_xy_vel_y.tex}
+
+            \begin{itemize}
+                \item plot error vs q
+                \item convert to subfigs
+                \item correct y label
+                \item dashed prediction
+            \end{itemize}
+        %     Maybe add this is there is time??
 
         \FloatBarrier\subsection{Dynamic payload} 
 
