--- a/results/plots/prac_pediction_xy_vel_y.tex
+++ b/results/plots/prac_pediction_xy_vel_y.tex
@@ -26,24 +26,19 @@
         ]
         
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = time, y = vel, col sep = comma] 
-        {results/csv/step_predictions_Prac_2021-08-23_04_double_pend_m1_0.2_m2_0.1_l1-0.5_l2_0.62_wind-0.5.csv_dmd_201.csv};
+        table[x = time, y = vel_y, col sep = comma] 
+        {results/csv/step_predictions_Prac_2021-08-23_02_l-0.5_mp-0.2_wind-0.5_XY_steps.csv_dmd_746.csv};
         \addlegendentry{Measured}
 
-        \addplot+[mark = none, style = dashed, ultra thick] 
-        table[x = time, y = vel_hat, col sep = comma] 
-        {results/csv/step_predictions_Prac_2021-08-23_04_double_pend_m1_0.2_m2_0.1_l1-0.5_l2_0.62_wind-0.5.csv_dmd_201.csv};
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = time, y = vel_y_hat, col sep = comma] 
+        {results/csv/step_predictions_Prac_2021-08-23_02_l-0.5_mp-0.2_wind-0.5_XY_steps.csv_dmd_746.csv};
         \addlegendentry{DMD prediction}
-
-        % \addplot+[mark = none, style = solid, ultra thick] 
-        % table[x = time, y = theta, col sep = comma] 
-        % {results/csv/step_predictions_Prac_2021-08-23_04_double_pend_m1_0.2_m2_0.1_l1-0.5_l2_0.62_wind-0.5.csv_dmd_201.csv};
-        % \addlegendentry{White-box model}
 
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Practical flight data and model predictions with an elongated payload for a North velocity step input
-        ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter})}
-    \label{fig:prac_pediction_double_pend_theta_black}
+    \caption{Practical flight data and model predictions for the North and East directions
+        ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter})}
+    \label{fig:prac_pediction_xy_vel_y}
 \end{figure}
