Added single pendulum prediction plots

--- a/results/results.tex
+++ b/results/results.tex
@@ -187,22 +187,13 @@
 
         \FloatBarrier\subsection{Predictions}
 
-            \begin{figure}
-                \captionsetup[subfigure]{justification=centering}
-                \centering
-                \input{results/plots/prediction_theta_1.tex} % subfigure
-                \input{results/plots/prediction_theta_1.tex} % subfigure
-                \caption{ DMD model predictions with test data
-                ().}
-                \label{fig:prediction_theta}  
-            \end{figure}
+            \paragraph
 
-            Single pendulum: 
-            \begin{itemize}
-                \item Plot 2 showing good theta
-                \item Plot 2 showing good velocity
-                \item Plot theta and velocity with bad prediction
-            \end{itemize}
+            \input{results/plots/prac_pediction_single_pend_theta_black.tex}
+
+            \paragraph
+            
+            \input{results/plots/prac_pediction_single_pend_vel_black.tex}
         
         \FloatBarrier\subsection{Extended dimensions}
 
