--- a/results/plots/FFT_pos_step_prac.tex
+++ b/results/plots/FFT_pos_step_prac.tex
@@ -33,5 +33,5 @@
     \end{tikzpicture} 
     
     \caption{The single-sided amplitude spectrum of the FFT}
-    \label{fig:FFT_pos_step}
+    \label{fig:FFT_pos_step_prac}
 \end{subfigure}
