--- a/results/plots/FFT_pos_step_subfigs_prac.tex
+++ b/results/plots/FFT_pos_step_subfigs_prac.tex
@@ -6,5 +6,5 @@
     \input{results/plots/FFT_pos_step_prac.tex} % subfigure
     \caption{ Data from a position step response used for cable length estimation 
     ($l =$~\SI{1}{\metre}, $m_p =$~\SI{0.3}{\kilo\gram}.).}
-    \label{fig:FFT_pos_step_subfigs}  
+    \label{fig:FFT_pos_step_subfigs_prac}  
 \end{figure}
