--- a/results/plots/prac_pediction_single_pend_vel_black.tex
+++ b/results/plots/prac_pediction_single_pend_vel_black.tex
@@ -7,7 +7,7 @@
             x unit = \si{\second},
             y unit = \si{\metre/\second},
             xmin = 0,   xmax = 20,
-            ymin = -2.5,  ymax = 2.5,
+            ymin = -2,  ymax = 1.5,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -27,23 +27,18 @@
         
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = time, y = vel, col sep = comma] 
-        {results/csv/step_predictions_Prac_2021-08-23_04_double_pend_m1_0.2_m2_0.1_l1-0.5_l2_0.62_wind-0.5.csv_dmd_201.csv};
+        {results/csv/step_predictions_Prac_2021-08-20_02_l-2_mp-0.3-wind-0.5.csv_dmd_737.csv};
         \addlegendentry{Measured}
 
         \addplot+[mark = none, style = dashed, ultra thick] 
         table[x = time, y = vel_hat, col sep = comma] 
-        {results/csv/step_predictions_Prac_2021-08-23_04_double_pend_m1_0.2_m2_0.1_l1-0.5_l2_0.62_wind-0.5.csv_dmd_201.csv};
+        {results/csv/step_predictions_Prac_2021-08-20_02_l-2_mp-0.3-wind-0.5.csv_dmd_737.csv};
         \addlegendentry{DMD prediction}
-
-        % \addplot+[mark = none, style = solid, ultra thick] 
-        % table[x = time, y = theta, col sep = comma] 
-        % {results/csv/step_predictions_Prac_2021-08-23_04_double_pend_m1_0.2_m2_0.1_l1-0.5_l2_0.62_wind-0.5.csv_dmd_201.csv};
-        % \addlegendentry{White-box model}
 
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Practical flight data and model predictions with an elongated payload for a North velocity step input
-        ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter})}
-    \label{fig:prac_pediction_double_pend_vel_black}
+    \caption{Model predictions of practical flight data with an suspended payload for a North velocity step input
+        ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram}, wind speed $\approx~$\SI{0.5}{\metre/\second})}
+    \label{fig:prac_pediction_single_pend_vel_black}
 \end{figure}
