Added initial glossary from CCA paper and deleted afrikaans package

--- a/results/plots/pos_step_single_pend_prac.tex
+++ b/results/plots/pos_step_single_pend_prac.tex
@@ -34,5 +34,5 @@
     \end{tikzpicture} 
     
     \caption{Position step response of the payload swing angle}
-    \label{fig:pos_step_single_pend}
+    \label{fig:pos_step_single_pend_prac}
 \end{subfigure}
