--- a/results/results.tex
+++ b/results/results.tex
@@ -188,6 +188,8 @@
         \FloatBarrier\subsection{Predictions}
 
             \paragraph
+            Notice how the prediction deviates more from the measured value as time progresses.
+            This is because of the build up, discrete, initial condition 
 
             \input{results/plots/prac_pediction_single_pend_theta_black.tex}
 
