--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -555,7 +555,7 @@
         \end{equation}
         The length of training data corresponding to $D = N_{train} \cdot n_x$ at the transition between over- and under-parameterization is therefore:
         \begin{equation}
-            T_{train} = N_{trian} \cdot T_s = \SI{54.9}{\second} .
+            T_{train} = N_{train} \cdot T_s = \SI{54.9}{\second} .
         \end{equation}
         This value is indeed within the range of considered training data lengths,
         which explains why our training experiments experience this phenomenon.
@@ -583,7 +583,7 @@
         In Section~\ref{sec:param_estimation} it was shown that the white-box system identification method
         perform well for the suspended payload use case.
         It was also shown in \cite{Slabber2020} and \cite{Erasmus2020} that this method can be used 
-        in conjunction with LQR control to minimise swing angles of an unknown payload.
+        in conjunction with LQR control to minimize swing angles of an unknown payload.
         However, many payloads do not satisfy the assumptions made in for the a priori model
         which is detrimental to performance of white-box method.
         For example, for an elongated payload attached to the cable the point mass assumption does not hold.
